# Flow

./: .gitignore  CMakeLists.txt  README.md  example.flow  filetest.sh  main.cpp
src/: CMakeLists.txt
src/ast/: CMakeLists.txt  Llvm.cpp
src/ast/include/Ast/: Exceptions.h  Expression.h  Llvm.h  Node.h  Statement.h
src/ast/include/Ast/Expressions/: Array.h  BinaryOp.h  FlowType.h  FunctionInvokation.h  Identifier.h  IdentifierWithType.h  IntegerLiteral.h  Lambda.h  PrefixExpression.h  StreamOut.h
src/ast/include/Ast/Statements/: ExpressionStatement.h  FunctionDefinition.h  IfStatement.h  LetStatement.h  ReturnStatement.h
src/codegen/: AstPass.h  CMakeLists.txt  GlobalDeclarationsPass.cpp  GlobalDeclarationsPass.h  Llvm.cpp  Utils.h
src/codegen/include/CodeGen/: Llvm.h
src/common/: CMakeLists.txt  Map.cpp
src/common/include/Common/: Map.h  Types.h  Utils.h
src/lexer/: CMakeLists.txt  Lexer.cpp  TokenStream.cpp
src/lexer/include/Lexer/: Lexer.h  TokenStream.h
src/parser/: CMakeLists.txt  Parser.cpp
src/parser/include/Parser/: Exception.h  Parser.h
src/token/: CMakeLists.txt  Token.cpp
src/token/include/Token/: Token.h  TokenDefs.h  TokenUtils.h
test/: CMakeLists.txt
test/Lexer/: CMakeLists.txt  CompoundTests.cpp  DeclarationTests.cpp  LexerTestUtils.h  OperatorTests.cpp  ReturnTests.cpp
test/Parser/: CMakeLists.txt  ParserTestUtils.h  Parser_Compound.cpp  Parser_ExpressionTests.cpp  Parser_StatementTests.cpp
test/TestCommon/: CMakeLists.txt  Dummy.cpp
test/TestCommon/include/TestCommon/: Common.h  Compound.h  Declarations.h  Operators.h
